@@ -72,6 +72,10 @@ wxMenuItemBase::wxMenuItemBase(wxMenu *parentMenu,
     m_isChecked   = FALSE;
     m_id          = id;
     m_kind        = kind;
+    if (m_id == wxID_ANY)
+        m_id = wxNewId();
+    if (m_id == wxID_SEPARATOR)
+        m_kind = wxITEM_SEPARATOR;
 }
 
 wxMenuItemBase::~wxMenuItemBase()
