@@ -122,6 +122,11 @@ All (GUI):
 - added wxStatusBar support to XRC (Brian Ravnsgaard Riis)
 - wxMenu::Append and etc. return a pointer to the wxMenuItem that was
   added or inserted, or NULL on failure.
+- Using a -1 (wxID_ANY) for menu or toolbar item IDs will now generate
+  a new ID for the item using wxNewId().  As a consequence of this,
+  the value of wxID_SEPARATOR was changed from -1 to -2 in order to
+  not clash.
+
 
 wxMSW:
 
